--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -10,6 +10,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: #F28D68;
 }
 
 @media screen and (max-width: 966px) {
@@ -29,6 +30,11 @@
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+}
+
+.title {
+  color: #F28D68;
+  text-align: center;
 }
 
 .featureImage {
