--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -6,7 +6,7 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 8rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -23,6 +23,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.featuresWrapper {
+  padding: 4rem 0;
 }
 
 .features {
